fixed responsive on mobile, completed hero

--- a/src/app/views/home/home-hero/home-hero.component.scss
+++ b/src/app/views/home/home-hero/home-hero.component.scss
@@ -19,3 +19,19 @@
 span {
   font-weight: bold;
 }
+
+.button-bakery {
+  width: 275px;
+  height: 70px;
+  border-radius: 4px;
+  background-color: #fbdfdb;
+  margin-top: 50px;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  color: #7b6b65;
+}
