--- a/src/app/views/home/home-intro/home-intro.component.scss
+++ b/src/app/views/home/home-intro/home-intro.component.scss
@@ -50,9 +50,9 @@
 }
 
 @media screen and (max-width: 800px) {
-  img {
+  #torta {
     float: none !important;
-    height: 20% !important;
+    height: 80% !important;
     width: 100% !important;
   }
   #title,
@@ -62,5 +62,8 @@
     width: 100% !important;
     padding: 0;
     margin: 0;
+  }
+  #home-intro {
+    display: inline;
   }
 }
